# PY_Web_10_Django

./: README.md  pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: urls.py  utils.py  views.py
hw_project/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  base.html  index.html  tag.html
hw_project/users/: forms.py  views.py
hw_project/users/templates/users/: signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json
mysite/: db.sqlite3  manage.py  urls.py
mysite/hw10_django/: pyproject.toml
mysite/hw10_django/hw_project/hw_project/: settings.py  urls.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: forms.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
mysite/quotes/: admin.py  connectDB.py  forms.py  models.py  send_to_db.py  update_quotes.py  urls.py  views.py
