[tool.poetry]
name = "hw10-django"
version = "0.1.0"
description = ""
authors = ["Dmytro-Ostrenko <142011911+Dmytro-Ostrenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
